src/main/java/com/example/restpolygon/error/exception/DataNotFoundException.java
package com.example.restpolygon.error.exception;

public class DataNotFoundException extends Exception {
	public DataNotFoundException(String message) {
		super(message);
	}

}
